updated Japanese translation

--- a/po/wesnoth-low/ja.po
+++ b/po/wesnoth-low/ja.po
@@ -3,17 +3,17 @@
 # Copyright (C) 2005-2010 Wesnoth development team
 # rouiza <polax1999@yahoo.co.jp>, 2010.
 # clearpotion <clearpotion+fantasy@gmail.com>, 2010.
-# IWAI, Masaharu <iwaim.sub@gmail.com>, 2011.
+# IWAI, Masaharu <iwaim.sub@gmail.com>, 2011-2012.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: The Battle for Wesnoth svn-trunk\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2011-04-07 18:45+0900\n"
+"PO-Revision-Date: 2012-07-09 07:05+0900\n"
 "Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: <wesnoth-ja-translate@lists.sourceforge.jp>\n"
-"Language: Japanese\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -262,12 +262,6 @@ msgstr "Erethean"
 
 #. [multiplayer]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:4
-#, fuzzy
-#| msgid ""
-#| "<i>The Legend of Wesmere</i>\n"
-#| "Multiplayer Campaign\n"
-#| "Chapter one\n"
-#| " Easy difficulty"
 msgid ""
 "<i>The Legend of Wesmere</i>\n"
 "Multiplayer Campaign\n"
@@ -275,8 +269,7 @@ msgid ""
 msgstr ""
 "<i>Wesmere の伝説</i>\n"
 "マルチプレイヤーキャンペーン\n"
-"第一章\n"
-"易しい"
+"第一章"
 
 #. [part]
 #. [scenario]: id=01_The_Uprooting
@@ -287,18 +280,12 @@ msgstr "根絶"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:42
-#, fuzzy
-#| msgid ""
-#| "<i>The Legend of Wesmere</i>,\n"
-#| "Chapter One\n"
-#| "Flight and fight"
 msgid ""
 "<i>The Legend of Wesmere</i>,\n"
 "Chapter One"
 msgstr ""
-"<i>Wesmere の伝説</i>\n"
-"第一章\n"
-"逃走と闘争"
+"<i>Wesmere の伝説</i>,\n"
+"第一章"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:46
@@ -306,6 +293,8 @@ msgid ""
 "Chapter One,\n"
 "<i>Flight and fight</i>"
 msgstr ""
+"第一章,\n"
+"<i>逃走と闘争</i>"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:55
@@ -313,26 +302,20 @@ msgid ""
 "The great elven heroes Kalenz and Landar were born in a quiet green wood in "
 "Lintanir on the fringes of the Great Northern Forest."
 msgstr ""
+"偉大なるエルフ族の英雄 Kalenz は、大陸北部の森林の外縁に位置する Lintanir の"
+"深く静かな森で生まれました。"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:58
-#, fuzzy
-#| msgid ""
-#| "The great elvish hero Kalenz was born in a quiet green wood in Lintanir "
-#| "on the fringes of the Great Northern Forest. Though not of noble birth, "
-#| "he showed early promise in the arts of his people. His quick intelligence "
-#| "gained him more than usual respect among elders normally inclined to pay "
-#| "little heed to anyone younger than a century old."
 msgid ""
 "Though not of noble birth, Kalenz showed early promise in the arts of his "
 "people. His quick intelligence gained him more than usual respect among "
 "elders normally inclined to pay little heed to anyone younger than a century "
 "old."
 msgstr ""
-"偉大なるエルフ族の英雄 Kalenz は、大陸北部の森林の外縁に位置する Lintanir の"
-"深く静かな森で生まれました。貴族の生まれではありませんでしたが、人々を統べる"
-"才能を早くから示し、その聡明さによって、普段は100歳にも満たない若者には何の関"
-"心も寄せないような年長のエルフからも、並ならぬ敬意を得ていました。"
+"Kalenz は貴族の生まれではありませんでしたが、人々を統べる才能を早くから示し、"
+"その聡明さによって、普段は100歳にも満たない若者には何の関心も寄せないような年"
+"長のエルフからも、並ならぬ敬意を得ていました。"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:64
@@ -342,6 +325,9 @@ msgid ""
 "But there was no real harm in the boy, and his jokes made him popular among "
 "the younger elves."
 msgstr ""
+"Landar と Kalenz は幼年期からの友人でした。彼も、初めは悪ふざけやイタズラを"
+"行って年長者に目をつけられていました。しかし、直接的な害はなく、その行為に"
+"よって彼は若いエルフから人気を獲得していました。"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:70
@@ -358,13 +344,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:74
-#, fuzzy
-#| msgid ""
-#| "Some changes were good. The Elves, awakened as from a long dream, began "
-#| "to increase in population. But some were very bad, and the worst of those "
-#| "was the coming of the orcs, the wreckers, the tree-killers. The years of "
-#| "Kalenz’s long childhood were a golden age, and the last time of "
-#| "untroubled peace."
 msgid ""
 "Some changes were good. The Elves, awakened as from a long dream, began to "
 "increase in population. But some were very bad, and the worst of those was "
@@ -373,22 +352,12 @@ msgid ""
 msgstr ""
 "変化のいくつかは良いものでした。長年の悲願であったエルフ族の人口増加が始まり"
 "ました。しかし変化のなかには悪いものもありました。なかでも最悪だったのはオー"
-"クの襲来でした。彼らは殺戮者にして、森の破壊者でした。Kalenz の長い幼年時代は"
-"黄金時代でした。同時に最後の問題のない平和な時代でもありました。"
+"クの襲来でした。彼らは殺戮者にして、森の破壊者でした。彼らの長い幼年期は黄金"
+"時代でした。同時に最後の問題のない平和な時代でもありました。"
 
 # 続く十年間にオーク族はさらなる大軍で侵攻し
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:80
-#, fuzzy
-#| msgid ""
-#| "The elves had never been a martial people, and they were not prepared for "
-#| "the inevitable war with the orcs. Kalenz came of age in the very year "
-#| "that Erlornas of Wesmere fought the first orcish raiders. Within the next "
-#| "decade orcish raids greatly increased, and their shadow loomed ever "
-#| "greater over the elves.\n"
-#| "\n"
-#| "This is the story of Kalenz, and of the Elves in the days of the humans "
-#| "in Wesnoth."
 msgid ""
 "The elves had never been a martial people, and they were not prepared for "
 "the inevitable war with the orcs. The friends came of age in the very year "
@@ -400,10 +369,10 @@ msgid ""
 "the humans in Wesnoth."
 msgstr ""
 "エルフ族は決して好戦的な民族ではありませんでした。そのためオーク族との戦争は"
-"不可避なものでしたが、戦いの準備をしていませんでした。Kalenz が成人したのは、"
-"まさに Wesmere の Erlornas がオーク族の最初の侵略者と戦った時でした。続く十年"
-"間にオークの襲撃は非常に増加し、エルフ族にとって益々増大する脅威として現れて"
-"きていました。\n"
+"不可避なものでしたが、戦いの準備をしていませんでした。幼馴染たちが成人したの"
+"は、まさに Wesmere の Erlornas がオーク族の最初の侵略者と戦った時でした。続く"
+"十年間にオークの襲撃は非常に増加し、エルフ族にとって益々増大する脅威として現"
+"れてきていました。\n"
 "\n"
 "これから始まるのは、Kalenz と Wesnoth が人間族の時代のエルフ達の物語でもあり"
 "ます。"
@@ -1084,10 +1053,8 @@ msgstr "Galtrid の死"
 #. [objective]: condition=lose
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:773
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:857
-#, fuzzy
-#| msgid "Death of Uradredia"
 msgid "Death of Eradion"
-msgstr "Uradredia の死"
+msgstr "Eradion の死"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:795
@@ -1141,8 +1108,6 @@ msgstr ""
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:815
-#, fuzzy
-#| msgid "How can they dare to break the treaty!"
 msgid "How dare they break the treaty!"
 msgstr "彼らはどうして条約を破棄するんだ！"
 
@@ -1279,19 +1244,11 @@ msgstr ""
 
 #. [multiplayer]: id=04_The_Elvish_Treasury
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:4
-#, fuzzy
-#| msgid "3p MC — LoW, Hard Mode, Chapter two"
 msgid "3p MC — LoW, Chapter two"
-msgstr "3p MC — LoW,難しい , 第二章"
+msgstr "3p MC - LoW, 第二章"
 
 #. [multiplayer]: id=04_The_Elvish_Treasury
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:5
-#, fuzzy
-#| msgid ""
-#| "<i>The Legend of Wesmere</i>\n"
-#| "Multiplayer Campaign\n"
-#| "Chapter two\n"
-#| " Hard difficulty"
 msgid ""
 "<i>The Legend of Wesmere</i>\n"
 "Multiplayer Campaign\n"
@@ -1299,8 +1256,7 @@ msgid ""
 msgstr ""
 "<i>Wesmere の伝説</i>\n"
 "マルチプレイヤーキャンペーン\n"
-"第二章\n"
-"難しい"
+"第二章"
 
 #. [scenario]: id=04_The_Elvish_Treasury
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:12
@@ -1310,21 +1266,21 @@ msgstr "エルフ族の宝物庫"
 # %%
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:36
-#, fuzzy
-#| msgid "The Legend of Wesmere, Chapter two"
 msgid ""
 "<i>The Legend of Wesmere</i>,\n"
 "Chapter Two"
-msgstr "Wesmere の伝説 第二章"
+msgstr ""
+"<i>Wesmere の伝説</i>\n"
+"第二章"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:41
-#, fuzzy
-#| msgid "Chapter Two: The Treasury"
 msgid ""
 "Chapter Two,\n"
 "<i>The Treasury</i>"
-msgstr "第二章 宝物庫"
+msgstr ""
+"第二章,\n"
+"<i>宝物庫</i>"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/04_The_Elvish_Treasury.cfg:45
@@ -1889,10 +1845,8 @@ msgstr ""
 
 #. [side]: type=Elvish Marshal, id=Eradion
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:167
-#, fuzzy
-#| msgid "Iradia"
 msgid "Eradion"
-msgstr "Iradia"
+msgstr "Eradion"
 
 #. [side]: type=Orcish Warlord, id=Mordrum
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:197
@@ -2640,12 +2594,12 @@ msgstr "賞金稼ぎ"
 # %%
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:35
-#, fuzzy
-#| msgid "The Legend of Wesmere, Chapter two"
 msgid ""
 "<i>The Legend of Wesmere</i>,\n"
 "Chapter Three"
-msgstr "Wesmere の伝説 第二章"
+msgstr ""
+"<i>Wesmere の伝説</i>,\n"
+"第三章"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:37
@@ -2658,12 +2612,12 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:43
-#, fuzzy
-#| msgid "Chapter two, Part one: The book of Crelanu"
 msgid ""
 "Chapter Three,\n"
 "<i>The Book of Crelanu</i>"
-msgstr "第二章 パート１ Crelanu の本"
+msgstr ""
+"第三章,\n"
+"<i>Crelanu の本</i>"
 
 # %%
 #. [part]
@@ -2759,11 +2713,8 @@ msgstr ""
 # %%
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:432
-#, fuzzy
-#| msgid ""
-#| "They are far too much to risk a confrontation, let's cross the river!"
 msgid "They are far too numerous to risk battle with. Let’s cross the river!"
-msgstr "奴らと対決しようにも、あまりにも多すぎるぞ。河を渡ろう！"
+msgstr "数が多すぎて交戦は危険だ。河を渡ろう！"
 
 # %%check
 #. [message]: id=Olurf
@@ -2815,8 +2766,8 @@ msgid ""
 "Before Kalenz left the Ka’lian he had ordered $left_behind_kalenz to stay "
 "and guard it."
 msgstr ""
-"Kalenz はKa'lian を出発する前、一部の戦士達にKa'lian を守るために残留するよう"
-"命じていました。"
+"Kalenz はKa'lian を出発する前、 $left_behind_kalenz にKa'lian を守るために残"
+"留するよう命じていました。"
 
 # %%check
 # Landar はKa'lian を出発する前、一部の戦士達にKa'lian を守るために残留するよう命じていました。以後Landar はドワーフ族を雇用することが出来ます。
@@ -2826,8 +2777,8 @@ msgid ""
 "Before Landar left the Ka’lian he had ordered $left_behind_landar to stay "
 "and guard it."
 msgstr ""
-"Landar はKa'lian を出発する前、一部の戦士達にKa'lian を守るために残留するよう"
-"命じていました。"
+"Landar はKa'lian を出発する前、 $left_behind_landar にKa'lian を守るために残"
+"留するよう命じていました。"
 
 #. [side]: type=Gryphon, id=Gryphon Leader
 #. [side]
@@ -3865,21 +3816,21 @@ msgstr "人間族との同盟"
 # %%
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:125
-#, fuzzy
-#| msgid "The Legend of Wesmere, Chapter two"
 msgid ""
 "<i>The Legend of Wesmere</i>,\n"
 "Chapter Four"
-msgstr "Wesmere の伝説 第二章"
+msgstr ""
+"<i>Wesmere の伝説</i>,\n"
+"第四章"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:130
-#, fuzzy
-#| msgid "Chapter two, Part two, The Alliance"
 msgid ""
 "Chapter Four,\n"
 "<i>The Alliance</i>"
-msgstr "第二章　パート２ 同盟"
+msgstr ""
+"第四章,\n"
+"<i>同盟</i>"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:135
@@ -4927,18 +4878,12 @@ msgstr "代償の多い復讐"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/19_Costly_Revenge.cfg:38
-#, fuzzy
-#| msgid ""
-#| "<i>The Legend of Wesmere</i>,\n"
-#| "Chapter One\n"
-#| "Flight and fight"
 msgid ""
 "<i>The Legend of Wesmere</i>,\n"
 "Chapter Five"
 msgstr ""
-"<i>Wesmere の伝説</i>\n"
-"第一章\n"
-"逃走と闘争"
+"<i>Wesmere の伝説</i>,\n"
+"第五章"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/19_Costly_Revenge.cfg:43
