updated Lithuanian translation

--- a/po/wesnoth-utbs/lt.po
+++ b/po/wesnoth-utbs/lt.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2010-01-01 00:00+0300\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"PO-Revision-Date: 2012-03-31 16:12+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -12656,11 +12656,11 @@ msgstr "geresnis lankininkas"
 
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Kaleh.cfg:220
 msgid "a marksman with the bow"
-msgstr ""
+msgstr "snaiperis su lanku"
 
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Kaleh.cfg:237
 msgid "gain +20% resistance under the sun"
-msgstr ""
+msgstr "gauti +20% atsparumą nuo saulės"
 
 #. [resistance]: id=sustenance
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Kaleh.cfg:256
