--- a/po/wesnoth-low/lt.po
+++ b/po/wesnoth-low/lt.po
@@ -1897,6 +1897,8 @@ msgid ""
 "In this scenario, you may change the behavior of an allied side’s AI using a "
 "context menu brought up by clicking on the allied side’s leader."
 msgstr ""
+"Šiame scenarijuje galite pakeisti sąjungininkų DI. Naudokite kontekstinį "
+"meniu, paspaudę ant sąjungininkų vado."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:656
@@ -3154,6 +3156,14 @@ msgid ""
 "heart, can safely handle it outside of battle. Unshielded, its magical "
 "radiance changes Haldric a little every time he comes close to it."
 msgstr ""
+"Kadaise laikiau Haldriką savo draugu, bet tai jis mane išvarė iš Vesnoto. "
+"Apkaltino mane mėginimu pavogti Rubiną, pasisavinti jo galią sau... Bet "
+"tiesa ta, kad Rubinas iškreipia Haldriko mintis, daro jį vis arogantiškesniu "
+"ir įtarinėjančiu tuos, ką anksčiau vadino vienminčiais. Mūšio lauke Rubiną "
+"gali naudoti bet kas, kai jo pyktis susilieja su ugningąją brangakmenio "
+"prigimtim. Bet tik didis magijos meistras arba tikras tyraširdis gali "
+"saugiai jį naudoti ne mūšyje. Nepažabota, magiškoji akmens šviesa vis keičia "
+"Haldriką kaskart, kai jis prie jo prisiartina."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:104
@@ -3209,6 +3219,10 @@ msgid ""
 "yearn to take their Great Chief’s place. You will be safe until a new leader "
 "arises strong enough to unite them again."
 msgstr ""
+"Turite nužudyti jų Didįjį vadą, ir taip, kad atrodytų, kad jį nužudė orkas. "
+"Tada tarp orkų kils pilietinis karas dėl valdžios, jos gviešiasi daugelis. "
+"Kol neatsiras naujas vadas, pakankamai stiprus, kad juos vėl suvienytų, "
+"būsite saugūs."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:139
@@ -3236,6 +3250,12 @@ msgid ""
 "destroy it than I could slay my own child. Aquagar is slain, but more will "
 "come. One of my allies has betrayed me, and now too many know of this book."
 msgstr ""
+"Taip ir yra. Tie slibinai norėjo mano knygos. Knygoje surašyti visi man "
+"žinomi užkeikimai. Jie galingi, bet vienas priešas jiems neįkandamas: "
+"senatvė. Žinojimas gundo mane prasiilginti gyvenimą blogio ir tamsos "
+"keliais... Bet knyga – mano gyvenimo darbas ir negaliu jos sunaikinti, kaip "
+"kad tėvas negalėtų nužudyti atžalos. Akvagaro nebėra, bet ateis kiti. Vienas "
+"bendrininkas mane išdavė, ir dabar daugelis žino apie knygą."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:159
@@ -3250,6 +3270,9 @@ msgid ""
 "be corrupted by its power. And then find someone worthy not merely to hold "
 "it, but to use it!"
 msgstr ""
+"Ne, mano laikas išseko... Bet tave, Kalenzai, aš įpareigoju paimti mano "
+"knygą ir saugoti ją nuo nevertų rankų. Rask ką nors, kas nepalūš nuo jos "
+"galios. O paskui rask, kas galėtų ją ne tik saugoti, bet ir naudoti!"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:169
@@ -3266,6 +3289,9 @@ msgid ""
 "book, but only a master can vanquish the lust for power that it will bring "
 "out in him. He who fails will turn into something like Haldric, or worse..."
 msgstr ""
+"Nes knyga – kaip Ugnies rubinas. Bet koks kvailys gali pasinaudoti jos "
+"magija, bet tik meistras atsispirs valdžios pagundai, kurią ji pažadins. Kam "
+"nepasiseks, pavirs kažkuo panašiu į Haldriką, ar dar blogesniu..."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:179
@@ -3323,6 +3349,9 @@ msgid ""
 "powerful undead lich. It will make you invisible, but it is likely also to "
 "have undesirable effects, some temporary, some permanent!"
 msgstr ""
+"Išties, turiu, bet jį naudoti pragaištinga. Jis pagamintas iš galingo "
+"nemirėlio ličo akių. Jis pavers jus nematomais, bet greičiausiai turės "
+"nepageidaujamų poveikių, kai kure bus laikini, kai kurie negrįžtami!"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:214
@@ -3407,6 +3436,8 @@ msgid ""
 "Oh, no, I forgot my dose of Crelanu’s invisibility philter. I’ll go back and "
 "get it. I’ll catch up with you later!"
 msgstr ""
+"O ne, pamiršau savo dozę Krelanu nematomumo eliksyro. Grįšiu pasiimt. Aš jus "
+"pasivysiu!"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/13_News_from_the_Front.cfg:122
@@ -3669,7 +3700,7 @@ msgstr ""
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:585
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:751
 msgid "The brazen cry of a war-horn is heard in the distance."
-msgstr ""
+msgstr "Tolumoje pasigirdo didingas karo rago stūgsmas."
 
 #. [unit]: id=Aldun, type=Horseman
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:499
@@ -3775,7 +3806,7 @@ msgstr "Kulradas"
 #. [message]: id=Kulrad
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:922
 msgid "I see foul orcs to be ridden down! Charge!"
-msgstr ""
+msgstr "Pavaikykim susmirdusius orkus! Pirmyn!"
 
 #. [message]: race=orc
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:927
@@ -3785,7 +3816,7 @@ msgstr "Daugiau tų prakeiktų raitųjų geluonių!! Bėkite, dinkime iš čia!"
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:933
 msgid "The not-at-all-brazen cry of a war-horn is heard in the distance."
-msgstr ""
+msgstr "Tolumoje girdisi visiškai nedidingas karo rago cypimas."
 
 #. [message]: id=Aldar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:950
@@ -3813,6 +3844,9 @@ msgid ""
 "that befits a healer. That is a good reminder for those who must walk the "
 "path of steel and warfare, and touches my heart."
 msgstr ""
+"Išties. Kaip visad, Kleodil, kalbi su išmintim ir rūpesčiu, pritinkamais "
+"žiniuonei. Geras priminimas mums, einantiems plieno ir karo keliu, glosto "
+"man širdį."
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:975
@@ -4106,6 +4140,7 @@ msgid ""
 "With our ruse revealed, the orcs will attack our forests instead of fighting "
 "among themselves."
 msgstr ""
+"Išaiškėjus mūsų klastai, orkai puls miškus, o ne ims peštis tarpusavyje."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die.cfg:371
@@ -4373,6 +4408,8 @@ msgstr ""
 msgid ""
 "Our defenses are stretched thin. Men, prepare to face another orcish attack!"
 msgstr ""
+"Mūsų gynyba plačiai išsiskirsčiusi. Vyrai, ruoškitės atremti dar vieną "
+"puolimą!"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/17_Breaking_the_Siege.cfg:311
@@ -4850,7 +4887,7 @@ msgstr "Stok! Dabar mes kaunamės už Landarą!"
 #. [message]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/21_Elvish_Assassins.cfg:193
 msgid "Hold your hand, $unit.name|! $second_unit.name| is on our side!"
-msgstr ""
+msgstr "Patrauk ginklą! $second_unit.name| yra mūsų pusėje!"
 
 #. [message]: role=betrayer
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/21_Elvish_Assassins.cfg:198
@@ -4858,6 +4895,8 @@ msgid ""
 "I will not stand by as Kalenz betrays us to the Humans and Dwarves. We "
 "follow Landar now!"
 msgstr ""
+"Aš nestovėsiu ir nežiūrėsiu kaip Kalenzas išduoda mus žmonėms ir dvarfams. "
+"Mes seksime Landarą!"
 
 #. [side]: type=Elvish Ranger, id=Antaril
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/21_Elvish_Assassins.cfg:212
@@ -5120,6 +5159,8 @@ msgid ""
 "Landar’s remaining followers’ lives were spared, but they were banished to "
 "Gitamoth forest, henceforth known as Silent Forest."
 msgstr ""
+"Likusių Landaro pasekėjų buvo pasigailėta, bet jie buvo ištremti į Gitamoto "
+"mišką, nuo tol vadinamą Tyliuoju mišku."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/24_Epilogue.cfg:23
@@ -5146,8 +5187,8 @@ msgid ""
 "When Kalenz felt his work to have been done as well as it might be, he "
 "retired with Cleodil to their home in the Forest of Lintanir."
 msgstr ""
-"Kai Kalenzas pajuto, kad jo darbas atliktas taip, kaip turi būti, jis kartu "
-"su Kleodil grįžo į jų namus Lintaniro miške."
+"Kai Kalenzas pajuto, kad jo darbas atliktas taip, kaip turi būti, kartu su "
+"Kleodil grįžo į namus Lintaniro miške."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter5/24_Epilogue.cfg:37
@@ -5191,17 +5232,17 @@ msgstr ""
 #. [unit_type]: id=Elvish Horse Archer
 #: data/campaigns/Legend_of_Wesmere/units/Horse_Archer.cfg:18
 msgid "Elvish Horse Archer"
-msgstr "Elfų raitasis lankininkas"
+msgstr ""
 
 #. [attack]: type=blade
 #: data/campaigns/Legend_of_Wesmere/units/Horse_Archer.cfg:22
 msgid "sword"
-msgstr "kardas"
+msgstr ""
 
 #. [attack]: type=pierce
 #: data/campaigns/Legend_of_Wesmere/units/Horse_Archer.cfg:31
 msgid "bow"
-msgstr "lankas"
+msgstr ""
 
 #. [leadership]: id=elates_kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/abilities.cfg:10
