--- a/po/wesnoth-utbs/lt.po
+++ b/po/wesnoth-utbs/lt.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-05-18 11:13+0200\n"
-"PO-Revision-Date: 2010-01-01 00:00+0300\n"
+"POT-Creation-Date: 2012-05-18 12:28+0200\n"
+"PO-Revision-Date: 2012-03-31 16:12+0300\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -2552,12 +2552,12 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2617
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2881
 msgid ""
-"We have suffered grievous losses, but we are not broken yet. Long will "
-"this slaughter be remembered by our people. Where was Eloh during the "
-"darkness? And I’m afraid that while elves who have fought with you in the "
-"past will gladly return, as the numbers of our people dwindle, it’s going to "
-"become more and more costly to recruit new warriors. It would be wise to "
-"stockpile gold against this eventuality."
+"We have suffered grievous losses, but we are not broken yet. Long will this "
+"slaughter be remembered by our people. Where was Eloh during the darkness? "
+"And I’m afraid that while elves who have fought with you in the past will "
+"gladly return, as the numbers of our people dwindle, it’s going to become "
+"more and more costly to recruit new warriors. It would be wise to stockpile "
+"gold against this eventuality."
 msgstr ""
 
 #. [message]: speaker=Kaleh
@@ -12656,11 +12656,11 @@ msgstr "geresnis lankininkas"
 
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Kaleh.cfg:220
 msgid "a marksman with the bow"
-msgstr ""
+msgstr "snaiperis su lanku"
 
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Kaleh.cfg:237
 msgid "gain +20% resistance under the sun"
-msgstr ""
+msgstr "gauti +20% atsparumą nuo saulės"
 
 #. [resistance]: id=sustenance
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Kaleh.cfg:256
