--- a/po/wesnoth/lt.po
+++ b/po/wesnoth/lt.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-05-18 11:13+0200\n"
-"PO-Revision-Date: 2012-01-06 15:52+0200\n"
+"PO-Revision-Date: 2012-02-18 14:36+0100\n"
 "Last-Translator: Andrius Štikonas <stikonas@gmail.com>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: Lithuanian\n"
@@ -560,10 +560,8 @@ msgstr "Turkų vertimas"
 
 #. [about]
 #: data/core/about.cfg:2771
-#, fuzzy
-#| msgid "Romanian Translation"
 msgid "Ukrainian Translation"
-msgstr "Rumunų vertimas"
+msgstr "Ukrainiečių vertimas"
 
 #. [about]
 #: data/core/about.cfg:2780
