eclipse plugin: Update the changelog

--- a/utils/umc_dev/changelog
+++ b/utils/umc_dev/changelog
@@ -6,6 +6,7 @@ Eclipse plugin changelog
 	* The projects cannot be created anymore until a default is created and selected
 	in the wizard.
 	* Changed the directory where the IDE stores its cache to: ``$home/.wesnoth_umcide".
+	* The path for the Wesnoth binary is now automatically set correctly when using Mac OS X.
 
 2.0.0
 	* The standalone version now has all the proper save/new/undo/redo 
