--- a/utils/umc_dev/manual/user_manual.tex
+++ b/utils/umc_dev/manual/user_manual.tex
@@ -226,14 +226,19 @@ For this you need just 2 single steps:
 The plugin, due to Eclipse's architecture, can be updated very simple. At any time, the user can check for new updates, by going to the menu: Help-$>$ Check for Updates. If there are any new versions released, they will get downloaded and applied. This way you'll need to download just the bits updated, not the whole eclipse or standalone version.
 
 \section{Frequently Asked Questions}
+
 \subsection{What is this plugin all about?}
-The plugin is in fact something like a WML IDE ( \href{http://en.wikipedia.org/wiki/Integrated_development_environment}{Wikipedia - IDE}). Basically it offers you some features that greatly help anybody who makes User made Content in WML.
+The plugin is in fact something like a WML IDE ( \href{http://en.wikipedia.org/wiki/Integrated_development_environment}{Wikipedia - IDE}). Basically it offers you some features that greatly help anybody who makes User Made Content in WML.
+
 \begin{description}
-\item- It has wizards for new campaign, scenario, faction, era and every other wml tag you can think of. You just complete the needed values and it generates the wml (with nice indentation).
-\item- It has frontends for launching wmltools( like wmllint, wmlscope, wmlindent on files/directories), the wesnoth game, map editor.
-\item- It has a specialized WML editor, that has syntax highlighting, tag folding and outline, autocompletion, macro "explorer" and so on.
-\item- It has a 'upload addon' feature that uploads the specified project to the addons server.
+\item - It has wizards for new campaigns, scenarios, factions, eras, and everything else you might think of. You just complete the needed values and it generates the wml (with nice indentation).
+\item - It has front-ends for launching wmltools (like wmllint, wmlscope, wmlindent on files/directories), the wesnoth game, and the map editor.
+\item - It has a specialized WML editor that has syntax highlighting, tag folding and outline, autocompletion, navigation to macro definitions and so on.
+\item - It has integrated addon management features that allow to upload or download arbitrary addons. 
 \end{description}
+
+\subsection{The IDE doesn't start anymore after update}
+If you have just used the auto-update mechanism, and after the restart the IDE doesn't start anymore, then you can use a simple script to fix it. Just go to the download page (\url{http://eclipse.wesnoth.org/download.html}) and download the "Post-Update fix" script for your Operating System and execute it. Place it on the same level with the UMC IDE binary (wesnoth\_umc\_dev), and run it. Now the IDE should start fine.
 
 \subsection{Where can I submit any bugs found?}
 Go over to Wesnoth's bug tracker: \href{https://gna.org/bugs/?func=additem&group=wesnoth&bug_group_id=116}{Add new bug}. Please be as specific as possible. Also, if you have any logs, please attach them - refer to the next FAQ Entry for ways of getting the logs.
