updated Greek translation

--- a/po/wesnoth-l/el.po
+++ b/po/wesnoth-l/el.po
@@ -2,9 +2,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-04-07 12:14+0200\n"
-"PO-Revision-Date: 2011-08-14 14:57+0100\n"
-"Last-Translator: nikos\n"
+"POT-Creation-Date: 2012-05-18 12:28+0200\n"
+"PO-Revision-Date: 2012-08-05 00:50+0200\n"
+"Last-Translator: \n"
 "Language-Team: none\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -1703,7 +1703,7 @@ msgstr "Πίτσερ"
 #. [message]: speaker=Pitcher
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:172
 msgid "whisper^<i>Baldras!</i>"
-msgstr "whisper^<i>Μπάλντρας!!</i>"
+msgstr "<i>Μπάλντρας!</i>"
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:176
@@ -2793,11 +2793,6 @@ msgstr "Χωριάτης Αρχικυνηγός"
 
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:228
-#, fuzzy
-#| msgid ""
-#| "Huntsmen have spent their lives in the backwoods and swamps of their "
-#| "wilderness homes. They can bullseye wamprats and track anything that "
-#| "moves in their territory."
 msgid ""
 "Huntsmen have spent their lives in the backwoods and swamps of their "
 "wilderness homes. They can bullseye ferocious swamp rats and track anything "
