--- a/po/wesnoth-utbs/el.po
+++ b/po/wesnoth-utbs/el.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-05-18 12:28+0200\n"
-"PO-Revision-Date: 2012-05-15 23:55+0200\n"
-"Last-Translator: byron <georgalasbyr@gmail.com>\n"
+"PO-Revision-Date: 2012-08-05 00:54+0200\n"
+"Last-Translator: \n"
 "Language-Team: none\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -15111,7 +15111,7 @@ msgstr "τόξο"
 #. [female]
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Archer.cfg:226
 msgid "female^Desert Archer"
-msgstr "θηλυκός^Τοξότης της Ερήμου"
+msgstr "Τοξότρια της Ερήμου"
 
 #. [unit_type]: id=Desert Avenger, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Avenger.cfg:4
@@ -15132,7 +15132,7 @@ msgstr ""
 #. [female]
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Avenger.cfg:162
 msgid "female^Desert Avenger"
-msgstr "θηλυκός^Εκδικητής της Ερήμου"
+msgstr "Εκδικητής της Ερήμου"
 
 #. [unit_type]: id=Desert Captain, race=elf
 #. [variation]
@@ -15176,7 +15176,7 @@ msgstr ""
 #. [unit_type]: id=Desert Druid, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Druid.cfg:4
 msgid "female^Desert Druid"
-msgstr "θηλυκός^Δρυΐδης της Ερήμου"
+msgstr "Δρυΐδης της Ερήμου"
 
 #. [unit_type]: id=Desert Druid, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Druid.cfg:34
@@ -15298,7 +15298,7 @@ msgstr "μπόλας"
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Hunter.cfg:154
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Nym.cfg:132
 msgid "female^Desert Hunter"
-msgstr "θηλυκός^Κυνηγός της Ερήμου"
+msgstr "Κυνηγός της Ερήμου"
 
 #. [unit_type]: id=Desert Marksman, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Marksman.cfg:4
@@ -15327,7 +15327,7 @@ msgstr "μεγάλο τόξο"
 #. [female]
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Marksman.cfg:181
 msgid "female^Desert Marksman"
-msgstr "θηλυκός^Σκοπευτής της Ερήμου"
+msgstr "Σκοπευτής της Ερήμου"
 
 #. [unit_type]: id=Desert Marshal, race=elf
 #. [variation]
@@ -15385,7 +15385,7 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Prowler.cfg:145
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Nym.cfg:157
 msgid "female^Desert Prowler"
-msgstr "θηλυκός^Ληστής της Ερήμου"
+msgstr "Απατεώνισσα της Ερήμου"
 
 #. [unit_type]: id=Desert Ranger, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Ranger.cfg:4
@@ -15408,7 +15408,7 @@ msgstr ""
 #. [female]
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Ranger.cfg:164
 msgid "female^Desert Ranger"
-msgstr "θηλυκός^Φύλακας της Ερήμου"
+msgstr "Φύλακας της Ερήμου"
 
 #. [unit_type]: id=Desert Rider, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Rider.cfg:4
@@ -15457,12 +15457,12 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Sentinel.cfg:126
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Nym.cfg:143
 msgid "female^Desert Sentinel"
-msgstr "θηλυκός^Φρουρός της Ερήμου"
+msgstr "Φρουρός της Ερήμου"
 
 #. [unit_type]: id=Desert Shaman, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:5
 msgid "female^Desert Shaman"
-msgstr "θηλυκός^Σαμάνος της Ερήμου"
+msgstr "Σαμάνος της Ερήμου"
 
 #. [unit_type]: id=Desert Shaman, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:34
@@ -15498,12 +15498,12 @@ msgstr ""
 #. [female]
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Sharpshooter.cfg:162
 msgid "female^Desert Sharpshooter"
-msgstr "θηλυκός^Ελεύθερος Σκοπευτής της Ερήμου"
+msgstr "Ελεύθερος Σκοπευτής της Ερήμου"
 
 #. [unit_type]: id=Desert Shyde, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shyde.cfg:4
 msgid "female^Desert Shyde"
-msgstr "θηλυκός^Νεράιδα της Ερήμου"
+msgstr "Νεράιδα της Ερήμου"
 
 #. [unit_type]: id=Desert Shyde, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shyde.cfg:39
@@ -15524,8 +15524,7 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Star.cfg:47
 msgid "SPECIAL_NOTE^ This unit can fly across any terrain except deep water."
 msgstr ""
-"ΕΙΔΙΚΗ_ΣΗΜΕΙΩΣΗ^ Αυτή η μονάδα μπορεί να πετάξει πάνω από κάθε έδαφος εκτός "
-"από βαθύ νερό."
+"Αυτή η μονάδα μπορεί να πετάξει πάνω από κάθε έδαφος εκτός από βαθύ νερό."
 
 #. [attack]: type=impact
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shyde.cfg:45
@@ -15536,7 +15535,7 @@ msgstr "νεραϊδάγγιγμα"
 #. [unit_type]: id=Desert Star, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Star.cfg:4
 msgid "female^Desert Star"
-msgstr "θηλυκός^Άστρο της Ερήμου"
+msgstr "Αστέρι της Ερήμου"
 
 #. [unit_type]: id=Desert Star, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Star.cfg:47
@@ -15557,14 +15556,12 @@ msgstr ""
 #. [unit_type]: id=Desert Star, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Star.cfg:47
 msgid "SPECIAL_NOTE^ It also gains a 10% bonus to resistance from all attacks."
-msgstr ""
-"ΕΙΔΙΚΗ_ΣΗΜΕΙΩΣΗ^ Επίσης, παίρνει ένα 10% μπόνους αντίσταση σε όλες τις "
-"επιθέσεις."
+msgstr "Επίσης, παίρνει ένα 10% μπόνους αντίσταση σε όλες τις επιθέσεις."
 
 #. [unit_type]: id=Divine Avatar, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Divine_Avatar.cfg:4
 msgid "female^Divine Avatar"
-msgstr "θηλυκός^Θεϊκή Εικόνα"
+msgstr "Θεϊκή Εικόνα"
 
 #. [unit_type]: id=Divine Avatar, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Divine_Avatar.cfg:19
@@ -15596,7 +15593,7 @@ msgstr "δέσμη φωτός"
 #. [unit_type]: id=Divine Incarnation, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Divine_Incarnation.cfg:4
 msgid "female^Divine Incarnation"
-msgstr "θηλυκός^Θεϊκή Ενσάρκωση"
+msgstr "Θεϊκή Ενσάρκωση"
 
 #. [unit_type]: id=Divine Incarnation, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Divine_Incarnation.cfg:19
@@ -16154,9 +16151,7 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/units/undead/Ethereal_Spectre.cfg:16
 #: data/campaigns/Under_the_Burning_Suns/units/undead/Ethereal_Wraith.cfg:17
 msgid "SPECIAL_NOTE^ This unit is able to move through solid stone walls."
-msgstr ""
-"ΕΙΔΙΚΗ_ΣΗΜΕΙΩΣΗ^ Αυτή η μονάδα μπορεί να περάσει μέσα από συμπαγείς "
-"πέτρινους τοίχους"
+msgstr "Αυτή η μονάδα μπορεί να περάσει μέσα από συμπαγείς πέτρινους τοίχους"
 
 #. [unit_type]: id=ENightgaunt
 #: data/campaigns/Under_the_Burning_Suns/units/undead/Ethereal_Nightgaunt.cfg:7
@@ -16169,8 +16164,8 @@ msgid ""
 "SPECIAL_NOTE^ Unlike normal Nightgaunts, Ethereal Nightgaunts cannot hide at "
 "night."
 msgstr ""
-"ΕΙΔΙΚΗ_ΣΗΜΕΙΩΣΗ^ Σε αντίθεση με τους απλούς λιπόσαρκους, οι Αιθέριοι "
-"Λιπόσαρκοι δεν μπορούν να κρυφτούν τη νύχτα."
+"Σε αντίθεση με τους απλούς λιπόσαρκους, οι Αιθέριοι Λιπόσαρκοι δεν μπορούν "
+"να κρυφτούν τη νύχτα."
 
 #. [unit_type]: id=ENightgaunt
 #: data/campaigns/Under_the_Burning_Suns/units/undead/Ethereal_Nightgaunt.cfg:14
@@ -16195,8 +16190,8 @@ msgstr "Αιθέρια Σκιά"
 msgid ""
 "SPECIAL_NOTE^ Unlike normal Shadows, Ethereal Shadows cannot hide at night."
 msgstr ""
-"ΕΙΔΙΚΗ_ΣΗΜΕΙΩΣΗ^ Σε αντίθεση με τις απλές σκιές, οι Αιθέριες Σκιές δεν "
-"μπορούν να κρυφτούν τη νύχτα."
+"Σε αντίθεση με τις απλές σκιές, οι Αιθέριες Σκιές δεν μπορούν να κρυφτούν τη "
+"νύχτα."
 
 #. [unit_type]: id=EShadow
 #: data/campaigns/Under_the_Burning_Suns/units/undead/Ethereal_Shadow.cfg:17
@@ -16450,7 +16445,7 @@ msgstr "ανανεωμένος"
 #. [set_variable]
 #: data/campaigns/Under_the_Burning_Suns/utils/kaleh-abilities.cfg:36
 msgid "female^stunned"
-msgstr "θηλυκός^ζαλισμένη"
+msgstr "ζαλισμένη"
 
 #. [set_variable]
 #: data/campaigns/Under_the_Burning_Suns/utils/kaleh-abilities.cfg:43
