--- a/po/wesnoth/el.po
+++ b/po/wesnoth/el.po
@@ -149,9 +149,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: el_gr\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-05-18 11:13+0200\n"
-"PO-Revision-Date: 2008-01-21 18:54+0200\n"
-"Last-Translator: Konstantinos Egarhos <atixos@gmail.com>\n"
+"POT-Creation-Date: 2012-05-18 12:28+0200\n"
+"PO-Revision-Date: 2012-08-05 00:40+0200\n"
+"Last-Translator: \n"
 "Language-Team:  <el@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -1877,7 +1877,7 @@ msgstr ""
 #. [language]
 #: data/english.cfg:23
 msgid "$name|’s Bridge,$name|’s Crossing"
-msgstr ""
+msgstr "Γέφυρα $name| , Διασταύρωση $name|"
 
 #. [language]
 #: data/english.cfg:24
@@ -1887,17 +1887,17 @@ msgstr ""
 #. [language]
 #: data/english.cfg:25
 msgid "$name River,River $name"
-msgstr "$name ποταμός,ποταμός $name"
+msgstr "$name Ποταμός,Ποταμός $name"
 
 #. [language]
 #: data/english.cfg:26
 msgid "$name Forest,$name|’s Forest"
-msgstr "$name δάσος,$name|s δάσος"
+msgstr "$name Δάσος,$name|s Δάσος"
 
 #. [language]
 #: data/english.cfg:27
 msgid "$name Lake"
-msgstr "$name λίμνη"
+msgstr "$name Λίμνη"
 
 #. [language]
 #: data/english.cfg:28
@@ -3036,9 +3036,8 @@ msgstr[0] ""
 msgstr[1] ""
 
 #: src/actions.cpp:2781
-#, fuzzy
 msgid "Units sighted! ($friendphrase, $enemyphrase)"
-msgstr "Εθεάθησαν μονάδες! ($friends φιλικές, $enemies εχθρικές)"
+msgstr "Εθεάθησαν μονάδες! ($friendphrase, $enemyphrase)"
 
 #: src/actions.cpp:2790
 msgid "(press $hotkey to keep moving)"
@@ -5237,7 +5236,7 @@ msgstr "Δέν βρέθηκαν εποχές"
 
 #: src/multiplayer_create.cpp:238
 msgid "$login|’s game"
-msgstr "Παράταξη"
+msgstr "Του $login|"
 
 #: src/multiplayer_create.cpp:304
 msgid "Invalid era selected"
@@ -5627,7 +5626,7 @@ msgstr ""
 
 #: src/playsingle_controller.cpp:695
 msgid "It is now $name|’s turn"
-msgstr "Τέλος σεναρίου"
+msgstr "Είναι η σειρά του $name|"
 
 #: src/playsingle_controller.cpp:933
 msgid "Scenario Report"
@@ -6273,57 +6272,46 @@ msgstr "Αντικατάσταση με $player"
 msgid "Whiteboard Options"
 msgstr ""
 
-#, fuzzy
 #~| msgid "Easy"
 #~ msgid "(Easy)"
 #~ msgstr "Εύκολο"
 
-#, fuzzy
 #~| msgid "Normal"
 #~ msgid "(Normal)"
 #~ msgstr "Κανονικό"
 
-#, fuzzy
 #~| msgid "Hard"
 #~ msgid "(Hard)"
 #~ msgstr "Δύσκολο"
 
-#, fuzzy
 #~| msgid "Players: "
 #~ msgid "Players"
 #~ msgstr "Παίκτες: "
 
-#, fuzzy
 #~| msgid "Enemy village"
 #~ msgid "Enemies"
 #~ msgstr " Εχθρικό χωριό"
 
-#, fuzzy
 #~| msgid "Difficulty: "
 #~ msgid "Difficulty: Easy"
 #~ msgstr "Δυσκολία: "
 
-#, fuzzy
 #~| msgid "Difficulty: "
 #~ msgid "Difficulty: Normal"
 #~ msgstr "Δυσκολία: "
 
-#, fuzzy
 #~| msgid "Difficulty: "
 #~ msgid "Difficulty: Hard"
 #~ msgstr "Δυσκολία: "
 
-#, fuzzy
 #~| msgid "Campaign: $campaign_name"
 #~ msgid "Main campaign define"
 #~ msgstr "Εκστρατεία: $campaign_name"
 
-#, fuzzy
 #~| msgid "Campaign Design"
 #~ msgid "Extra campaign define"
 #~ msgstr "Σχεδιαστές Εκστρατείων"
 
-#, fuzzy
 #~| msgid "Multiplayer"
 #~ msgid "Multiplayer define"
 #~ msgstr "Δικτυακό Παιχνίδι"
