--- a/po/wesnoth-tb/el.po
+++ b/po/wesnoth-tb/el.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2011-08-23 00:16+0200\n"
+"POT-Creation-Date: 2012-05-18 12:28+0200\n"
+"PO-Revision-Date: 2012-08-05 00:30+0200\n"
 "Last-Translator: Konstantinos Egarhos <konsnos@windowslive.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -20,7 +20,7 @@ msgstr "Τα Δυο Αδέρφια"
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:13
 msgid "AToTB"
-msgstr "AToTB"
+msgstr "ΤΔΑ"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:17
@@ -189,7 +189,11 @@ msgstr ""
 "η μαγεία μου είναι πιο δυνατή από την δική του, όμως κρύβεται στους λόφους. "
 "Οι υπηρέτες του τον προστατεύουν, και εγώ είμαι υποχρεωμένος να τον πολεμήσω "
 "με φοβισμένους χωριάτες, οπλισμένους με ξύλα και ξυράφια. Χρειάζομαι τον "
-"αδερφό μου - ήταν πάντα καλύτερος στις μάχες απ' ότι εγώ."
+"αδερφό μου - ήταν πάντα καλύτερος στις μάχες απ' ότι εγώ.\n"
+"\n"
+"Θα έφθανε το μήνυμά μου σε αυτόν; Δεν ξέρω αν έχει κρατήσει το φυλακτό. Δεν "
+"έχουμε μιλήσει από εκείνη την καταραμένη μέρα στο Τόεν Κάρικ. Εάν δεν έρθει "
+"για μένα, ίσως έρθει για να βοηθήσει το χωριό τώρα που τον χρειάζεται."
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:80
@@ -1099,7 +1103,7 @@ msgstr "$second_password_1|!"
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:492
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:608
 msgid "$second_password_2|!"
-msgstr "second_password_2|!"
+msgstr "$second_password_2|!"
 
 #. [option]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:498
